--- a/requirements.txt
+++ b/requirements.txt
@@ -48,7 +48,9 @@ mysql-connector-python >= 8.0.28, <=8.0.29
 
 numpy==1.21.4
 
-openlxp-notification >=1.4.4, <1.5.0
+# openlxp-P1-notification >=0.0.4, <2.0.0
+
+openlxp-P1-notification ==0.0.6
 
 openlxp-xia >=1.6.0, < 1.7.0
 
@@ -59,6 +61,8 @@ pandas>=1.3.5,<1.4.0
 Pillow >=9.2.0, <10.3.0
 
 python-magic >=0.4.27, <0.5
+
+python-dotenv>=0.19.0,<1.20.0
 
 pytz >=2021.1, <2021.3
 
